--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
 }
+
+
+.magicpattern { 
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: repeat;
+}
